@@ -1,5 +1,10 @@
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* ieee754r/logbd32.c: Cleanup implementation to use only libdecnumber
+	operations.
+
+2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* tests/test-numdigits.c: Cleanup.
 
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
